--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/johngrib/hngcsnt#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.11.1",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
